--- a/pipelines/pipeline_downstream_upgrade.yaml
+++ b/pipelines/pipeline_downstream_upgrade.yaml
@@ -20,13 +20,13 @@ spec:
       type: string
       description: The namespace to deploy ACM onto the target cluster
       default: "open-cluster-management"
-    - name: snapshot
+    - name: downstream
       type: string
-      description: The downstream SNAPSHOT to used to initally deploy ACM
+      description: The downstream DOWNSTREAM to used to initally deploy ACM
       default: "2.6-latest"
     - name: targetSnapshot
       type: string
-      description: The downstream SNAPSHOT to used to upgrade ACM
+      description: The downstream DOWNSTREAM to used to upgrade ACM
       default: "2.7-latest"
     - name: sendNotification
       type: string
@@ -57,8 +57,8 @@ spec:
           value: $(params.clusterPoolName)
         - name: clusterClaimLifetime
           value: $(params.clusterClaimLifetime)
-        - name: snapshot
-          value: "$(params.snapshot)"
+        - name: downstream
+          value: "$(params.downstream)"
       taskRef:
         kind: Task
         name: deploy-acm-hyper-param-validation
@@ -102,8 +102,8 @@ spec:
       params:
         - name: namespace
           value: "$(params.namespace)"
-        - name: snapshot
-          value: "$(params.snapshot)"
+        - name: downstream
+          value: "$(params.downstream)"
         - name: imagePullSecret
           value: "$(tasks.checkout-hub-cluster.results.imagePullSecret)"
       runAfter:
@@ -118,8 +118,8 @@ spec:
       params:
         - name: namespace
           value: $(params.namespace)
-        - name: snapshot
-          value: "$(params.snapshot)"
+        - name: downstream
+          value: "$(params.downstream)"
         - name: imagePullSecret
           value: "$(tasks.checkout-hub-cluster.results.imagePullSecret)"
       runAfter:
@@ -211,8 +211,8 @@ spec:
       params:
         - name: sendNotification
           value: "$(params.sendNotification)"
-        - name: snapshot
-          value: "$(params.snapshot)"
+        - name: downstream
+          value: "$(params.downstream)"
         - name: targetSnapshot
           value: "$(params.targetSnapshot)"
         - name: hubOcLogin
