--- a/pipelines/pipeline_upstream.yaml
+++ b/pipelines/pipeline_upstream.yaml
@@ -20,9 +20,9 @@ spec:
       type: string
       description: The namespace to deploy ACM onto the target cluster
       default: "open-cluster-management"
-    - name: snapshot
+    - name: downstream
       type: string
-      description: The upstream SNAPSHOT to used to deploy ACM
+      description: The upstream DOWNSTREAM to used to deploy ACM
       default: "2.0-latest"
     - name: sendNotification
       type: string
@@ -53,8 +53,8 @@ spec:
           value: $(params.clusterPoolName)
         - name: clusterClaimLifetime
           value: $(params.clusterClaimLifetime)
-        - name: snapshot
-          value: "$(params.snapshot)"
+        - name: downstream
+          value: "$(params.downstream)"
       taskRef:
         kind: Task
         name: deploy-acm-hyper-param-validation
@@ -114,8 +114,8 @@ spec:
       params:
         - name: namespace
           value: "$(params.namespace)"
-        - name: snapshot
-          value: "$(params.snapshot)"
+        - name: downstream
+          value: "$(params.downstream)"
         - name: imagePullSecret
           value: "$(tasks.checkout-hub-cluster.results.imagePullSecret)"
       runAfter:
@@ -130,8 +130,8 @@ spec:
       params:
         - name: namespace
           value: $(params.namespace)
-        - name: snapshot
-          value: "$(params.snapshot)"
+        - name: downstream
+          value: "$(params.downstream)"
         - name: imagePullSecret
           value: "$(tasks.checkout-hub-cluster.results.imagePullSecret)"
       runAfter:
@@ -199,8 +199,8 @@ spec:
       params:
         - name: sendNotification
           value: "$(params.sendNotification)"
-        - name: snapshot
-          value: "$(params.snapshot)"
+        - name: downstream
+          value: "$(params.downstream)"
         - name: runStatus
           value: "$(tasks.status)"
         - name: hubOcLogin
