--- a/tasks/task_applyPrereqsUpstream.yaml
+++ b/tasks/task_applyPrereqsUpstream.yaml
@@ -4,90 +4,90 @@ metadata:
   name: deploy-us-acm-hyper-prereqs
 spec:
   params:
-  - name: namespace
-    default: open-cluster-management
-    description: The namespace to deploy ACM into
-    type: string
-  - name: snapshot
-    default: ""
-    description: The SNAPSHOT Tag used to deploy the catalogsources
-    type: string
-  - name: imagePullSecret
-    default: ""
-    description: The image pull secret used to deploy the catalogsources. Copied from clusterPoolNamespace
-    type: string
+    - name: namespace
+      default: open-cluster-management
+      description: The namespace to deploy ACM into
+      type: string
+    - name: downstream
+      default: ""
+      description: The DOWNSTREAM Tag used to deploy the catalogsources
+      type: string
+    - name: imagePullSecret
+      default: ""
+      description: The image pull secret used to deploy the catalogsources. Copied from clusterPoolNamespace
+      type: string
   steps:
-  - args:
-    - |-
-      #!/bin/bash
-      set -e
+    - args:
+        - |-
+          #!/bin/bash
+          set -e
 
-      _LOGIN_CMD=$(cat login.sh)
-      eval "$_LOGIN_CMD"
+          _LOGIN_CMD=$(cat login.sh)
+          eval "$_LOGIN_CMD"
 
-      echo "Creating Namespace..."
-      oc create namespace $(inputs.params.namespace) --dry-run=client -o yaml | oc apply -f -
-      
+          echo "Creating Namespace..."
+          oc create namespace $(inputs.params.namespace) --dry-run=client -o yaml | oc apply -f -
 
-      echo "Creating ImagePullSecret..."
-      _TEMPLATE="apiVersion: v1
-      data:
-        .dockerconfigjson: $(inputs.params.imagePullSecret)
-      kind: Secret
-      metadata:
-        name: acm-pull-secret
-      type: kubernetes.io/dockerconfigjson"
-      echo "$_TEMPLATE" | oc apply -n $(inputs.params.namespace) -f  -
-      echo "$_TEMPLATE" | oc apply -n openshift-marketplace -f -
 
-      echo "Creating ACM CatalogSource..."
+          echo "Creating ImagePullSecret..."
+          _TEMPLATE="apiVersion: v1
+          data:
+            .dockerconfigjson: $(inputs.params.imagePullSecret)
+          kind: Secret
+          metadata:
+            name: acm-pull-secret
+          type: kubernetes.io/dockerconfigjson"
+          echo "$_TEMPLATE" | oc apply -n $(inputs.params.namespace) -f  -
+          echo "$_TEMPLATE" | oc apply -n openshift-marketplace -f -
 
-      _TEMPLATE="apiVersion: operators.coreos.com/v1alpha1
-      kind: CatalogSource
-      metadata:
-        name: acm-custom-registry
-        namespace: openshift-marketplace
-      spec:
-        displayName: Advanced Cluster Management
-        image: quay.io/stolostron/acm-custom-registry:$(inputs.params.snapshot)
-        publisher: Red Hat
-        sourceType: grpc
-        updateStrategy:
-          registryPoll:
-            interval: 10m
-        secrets:
-        - acm-pull-secret"
-      echo "$_TEMPLATE" | oc apply -f -
+          echo "Creating ACM CatalogSource..."
 
-      echo "Creating MCE CatalogSource..."
+          _TEMPLATE="apiVersion: operators.coreos.com/v1alpha1
+          kind: CatalogSource
+          metadata:
+            name: acm-custom-registry
+            namespace: openshift-marketplace
+          spec:
+            displayName: Advanced Cluster Management
+            image: quay.io/stolostron/acm-custom-registry:$(inputs.params.downstream)
+            publisher: Red Hat
+            sourceType: grpc
+            updateStrategy:
+              registryPoll:
+                interval: 10m
+            secrets:
+            - acm-pull-secret"
+          echo "$_TEMPLATE" | oc apply -f -
 
-      _TEMPLATE="apiVersion: operators.coreos.com/v1alpha1
-      kind: CatalogSource
-      metadata:
-        name: multiclusterengine-catalog
-        namespace: openshift-marketplace
-      spec:
-        displayName: MultiCluster Engine
-        image: quay.io/stolostron/cmb-custom-registry:$(inputs.params.snapshot)
-        publisher: Red Hat
-        sourceType: grpc
-        updateStrategy:
-          registryPoll:
-            interval: 10m
-        secrets:
-        - acm-pull-secret"
-      echo "$_TEMPLATE" | oc apply -f -
+          echo "Creating MCE CatalogSource..."
 
-      echo "Applying cluster and machine autoscaling ..."
+          _TEMPLATE="apiVersion: operators.coreos.com/v1alpha1
+          kind: CatalogSource
+          metadata:
+            name: multiclusterengine-catalog
+            namespace: openshift-marketplace
+          spec:
+            displayName: MultiCluster Engine
+            image: quay.io/stolostron/cmb-custom-registry:$(inputs.params.downstream)
+            publisher: Red Hat
+            sourceType: grpc
+            updateStrategy:
+              registryPoll:
+                interval: 10m
+            secrets:
+            - acm-pull-secret"
+          echo "$_TEMPLATE" | oc apply -f -
 
-      oc apply -f samples/resources/clusterautoscaler.yaml
-      oc apply -f samples/resources/machineautoscaler.yaml
-    command:
-    - /bin/bash
-    - -c
-    image: quay.io/zkayyali812/ocm-utils:latest
-    name: apply
-    resources: {}
-    workingDir: /workspace/source
+          echo "Applying cluster and machine autoscaling ..."
+
+          oc apply -f samples/resources/clusterautoscaler.yaml
+          oc apply -f samples/resources/machineautoscaler.yaml
+      command:
+        - /bin/bash
+        - -c
+      image: quay.io/zkayyali812/ocm-utils:latest
+      name: apply
+      resources: {}
+      workingDir: /workspace/source
   workspaces:
-  - name: source
+    - name: source
