--- a/tasks/task_createHostedCluster.yaml
+++ b/tasks/task_createHostedCluster.yaml
@@ -10,7 +10,12 @@ spec:
       type: string
   results:
     - name: hdStatus
-      description: Status of the Hosted cluster
+      description: Status of the hosted cluster
+    - name: hostedClusterName
+      description: Name of the hosted cluster
+    - name: infraID
+      description: infra id of the hosted cluster
+    
   steps:
     - args:
         - |-
@@ -68,6 +73,9 @@ spec:
           CLUSTER_UUID_1=$(uuidgen)
           INFRA_OUTPUT_FILE_1=${CLUSTER_NAME_1}-infraout
           IAM_OUTPUT_FILE_1=${CLUSTER_NAME_1}-iam
+
+          echo "$CLUSTER_NAME_1" | tr -d '\n' > $(results.hostedClusterName.path)
+          echo "$INFRA_ID_1" | tr -d '\n' > $(results.infraID.path)
 
 
           createHostedCluster() {
@@ -140,6 +148,8 @@ spec:
 
               # Copy the template hostedcluster nodepool manifestwork YAML
               cp ./resources/hosted_cluster_manifestwork.yaml ./${vars[CLUSTER_NAME]}.yaml
+              echo "Copying " ./resources/hosted_cluster_manifestwork.yaml "to" ./${vars[CLUSTER_NAME]}.yaml
+              echo ./${vars[CLUSTER_NAME]}.yaml
               if [ $? -ne 0 ]; then
                   echo "$(date) failed to copy hosted_cluster_manifestwork.yaml"
                   echo "$(date) Destroying the AWS infrastructure and IAM"
@@ -150,6 +160,7 @@ spec:
 
               # Copy the template htpasswd manifestwork YAML
               cp ./resources/htpasswd.yaml ./${vars[CLUSTER_NAME]}-htpasswd.yaml
+              echo "Copying" ./resources/htpasswd.yaml "to" ./${vars[CLUSTER_NAME]}-htpasswd.yaml
               if [ $? -ne 0 ]; then
                   echo "$(date) failed to copy htpasswd.yaml"
                   echo "$(date) Destroying the AWS infrastructure and IAM"
@@ -160,6 +171,7 @@ spec:
 
               # Copy the template managedcluster YAML
               cp ./resources/managedcluster.yaml ./${vars[CLUSTER_NAME]}-managedcluster.yaml
+              echo "Copying" ./resources/managedcluster.yaml "to" ./${vars[CLUSTER_NAME]}-managedcluster.yaml
               if [ $? -ne 0 ]; then
                   echo "$(date) failed to copy managedcluster.yaml"
                   echo "$(date) Destroying the AWS infrastructure and IAM"
@@ -227,73 +239,6 @@ spec:
                   ${HYPERSHIFT_COMMAND} destroy infra aws --region ${REGION} --aws-creds ${AWS_CREDS_FILE} --base-domain $vars[BASE_DOMAIN] --infra-id ${vars[INFRA_ID]}
                   exit 1
               fi
-          }
-
-          deleteHostedCluster() {
-              clusterName=$1
-              infraID=$2
-
-              ${KUBECTL_COMMAND} delete -f ${clusterName}-managedcluster.yaml
-              if [ $? -ne 0 ]; then
-                  echo "$(date) failed to delete -f ${clusterName}-managedcluster.yaml"
-                  echo "$(date) Destroying the AWS infrastructure and IAM"
-                  ${HYPERSHIFT_COMMAND} destroy iam aws --region ${REGION} --aws-creds ${AWS_CREDS_FILE} --infra-id ${infraID}
-                  ${HYPERSHIFT_COMMAND} destroy infra aws --region ${REGION} --aws-creds ${AWS_CREDS_FILE} --base-domain ${BASE_DOMAIN} --infra-id ${infraID}
-                  #exit 1 Don't exit so we can continue cleaning up as much as we can
-              fi
-
-              # Verify that the managed cluster is deleted
-              waitForManagedClusterDelete ${infraID}
-
-              # Delete the manifestworks
-              ${KUBECTL_COMMAND} delete -f ${clusterName}-htpasswd.yaml
-              if [ $? -ne 0 ]; then
-                  echo "$(date) failed to delete -f ${clusterName}-htpasswd.yaml"
-                  echo "$(date) Destroying the AWS infrastructure and IAM"
-                  ${HYPERSHIFT_COMMAND} destroy iam aws --region ${REGION} --aws-creds ${AWS_CREDS_FILE} --infra-id ${infraID}
-                  ${HYPERSHIFT_COMMAND} destroy infra aws --region ${REGION} --aws-creds ${AWS_CREDS_FILE} --base-domain ${BASE_DOMAIN} --infra-id ${infraID}
-                  #exit 1 Don't exit so we can continue cleaning up as much as we can
-              fi
-
-              ${KUBECTL_COMMAND} delete -f ${clusterName}.yaml
-              if [ $? -ne 0 ]; then
-                  echo "$(date) failed to delete -f ${clusterName}.yaml"
-                  echo "$(date) Destroying the AWS infrastructure and IAM"
-                  ${HYPERSHIFT_COMMAND} destroy iam aws --region ${REGION} --aws-creds ${AWS_CREDS_FILE} --infra-id ${infraID}
-                  ${HYPERSHIFT_COMMAND} destroy infra aws --region ${REGION} --aws-creds ${AWS_CREDS_FILE} --base-domain ${BASE_DOMAIN} --infra-id ${infraID}
-                  #exit 1 Don't exit so we can continue cleaning up as much as we can
-              fi
-
-              # Verify that the manifestwork with hostedcluster and nodepool payload is deleted
-              waitForManifestworkDelete ${HOSTING_CLUSTER_NAME} ${infraID}
-          }
-
-          cleaup() {
-              clusterName=$1
-              infraID=$2
-              infraFile=$3
-              iamFile=$4
-
-              echo "$(date) ==== Destroying AWS IAM ===="
-              echo "$(date) ${HYPERSHIFT_COMMAND} destroy iam aws --region ${REGION} --aws-creds ${AWS_CREDS_FILE} --infra-id ${infraID}"
-
-              ${HYPERSHIFT_COMMAND} destroy iam aws --region ${REGION} --aws-creds ${AWS_CREDS_FILE} --infra-id ${infraID}
-
-
-              echo "$(date) ==== Destroying AWS infrastructure ===="
-              echo "$(date) ${HYPERSHIFT_COMMAND} destroy infra aws --region ${REGION} -aws-creds ${AWS_CREDS_FILE} --base-domain ${BASE_DOMAIN} --infra-id ${infraID}"
-
-              ${HYPERSHIFT_COMMAND} destroy infra aws --region ${REGION} --aws-creds ${AWS_CREDS_FILE} --base-domain ${BASE_DOMAIN} --infra-id ${infraID}
-
-              # Remove the files
-              rm ${infraFile}
-              rm ${iamFile}
-              rm ${clusterName}.yaml
-              rm ${clusterName}-htpasswd.yaml
-              rm ${clusterName}-managedcluster.yaml
-              rm ${clusterName}.yaml-e
-              rm ${clusterName}-htpasswd.yaml-e
-              rm ${clusterName}-managedcluster.yaml-e
           }
 
           verifyHostedCluster() {
@@ -401,35 +346,6 @@ spec:
               done
           }
 
-          waitForManifestworkDelete() {
-              FOUND=1
-              SECONDS=0
-
-              resNamespace=$1
-              resName=$2
-
-              while [ ${FOUND} -eq 1 ]; do
-                  # Wait up to 30 minutes
-                  if [ $SECONDS -gt 1800 ]; then
-                      echo "$(date) Timed out waiting for manifestwork ${resNamespace}/${resName} to be deleted."
-                      ${KUBECTL_COMMAND} get manifestwork ${resName} -n ${resNamespace} -o yaml
-                      ${HYPERSHIFT_COMMAND} destroy iam aws --region ${REGION} --aws-creds ${AWS_CREDS_FILE} --infra-id ${vars[INFRA_ID]}
-                      ${HYPERSHIFT_COMMAND} destroy infra aws --region ${REGION} --aws-creds ${AWS_CREDS_FILE} --base-domain $vars[BASE_DOMAIN] --infra-id ${vars[INFRA_ID]}
-                      exit 1
-                  fi
-
-                  ${KUBECTL_COMMAND} get manifestwork ${resName} -n ${resNamespace}
-                  if [ $? -eq 0 ]; then
-                      echo "$(date) manifestwork ${resNamespace}/${resName} still exists"
-                  else
-                      echo "$(date) manifestwork ${resNamespace}/${resName} not found"
-                      break
-                  fi
-
-                  sleep 30
-                  (( SECONDS = SECONDS + 30 ))
-              done
-          }
 
           enableHypershiftForLocalCluster() {
               ${KUBECTL_COMMAND} create secret generic hypershift-operator-external-dns-credentials --from-file=credentials=${AWS_CREDS_FILE} --from-literal=provider=aws --from-literal=domain-filter=${EXT_DNS_DOMAIN} -n local-cluster
@@ -576,14 +492,7 @@ spec:
           echo "$(date) ==== Verifying hosted cluster  ${CLUSTER_NAME_1} ===="
           verifyHostedCluster ${INFRA_ID_1}
 
-          # Delete the managed cluster
-          echo "$(date) ==== Deleting hosted cluster  ${CLUSTER_NAME_1} ===="
-          deleteHostedCluster ${CLUSTER_NAME_1} ${INFRA_ID_1}
-
-
-          # Destroy infra, IAM and remove files
-          echo "$(date) ==== Cleaning up hosted cluster  ${CLUSTER_NAME_1} ===="
-          cleaup ${CLUSTER_NAME_1} ${INFRA_ID_1} ${INFRA_OUTPUT_FILE_1} ${IAM_OUTPUT_FILE_1}
+          echo "-----------------HOSTED CLUSTER CREATION SUCCESSFUL-----------------"
 
           exit 0
       command:
