--- a/trigger/template.yaml
+++ b/trigger/template.yaml
@@ -24,7 +24,7 @@ spec:
             value: 11h
           - name: namespace
             value: open-cluster-management
-          - name: snapshot
+          - name: downstream
             value: $(tt.params.acmbuild)
           - name: sendNotification
             value: "true"
